fixes layout issue with footer

--- a/src/assets/css/40-components-global.css
+++ b/src/assets/css/40-components-global.css
@@ -131,9 +131,8 @@
   }
 
   .g-footer__links {
-    display: flex;
+    text-align: center;
     grid-area: links;
-    justify-content: space-evenly;
   }
 
   .g-footer__link {
@@ -150,8 +149,7 @@
       text-align: left;
     }
     .g-footer__links {
-      align-items: center;
-      justify-content: flex-end;
+      text-align: right;
     }
   }
   /* ===============
